# erebus-server2

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.TXT  build-debian.sh  build-debian64.sh  build-windows64.cmd  build.cmd  erebus-version.h.in  generate-debian.sh  generate-windows.cmd  generate-windows64.cmd  prepare-for-vscode.sh  update-conan.cmd  update-conan.sh  vsdevcmd.trace.txt
cmake/: debug.cmake  version.cmake
conan/debian-64/: .gitignore  conanbuildinfo.txt  conanfile.txt  conaninfo.txt  conanprofile.debug  conanprofile.release  update_conan.sh
conan/win64-vc143/: conanfile.txt  conanprofile.debug  conanprofile.release  update_conan.cmd
include/erebus/ipc/: client.hxx  client_base.hxx  ipc.hxx  server.hxx  service.hxx
include/erebus/ipc/grpc/: grpc_client.hxx  grpc_server.hxx
include/erebus/system/: assert.hxx  binary.hxx  bool.hxx  debug.hxx  empty.hxx  erebus.hxx  exception.hxx  flags.hxx  format.hxx  generic_handle.hxx  log.hxx  logger2.hxx  luaxx.hxx  program.hxx  property.hxx  property_bag.hxx  property_info.hxx  result.hxx  type_id.hxx  waitable.hxx
include/erebus/system/logger/: file_sink2.hxx  null_logger.hxx  null_logger2.hxx  ostream_sink2.hxx  simple_formatter.hxx  simple_formatter2.hxx  syslog_linux.hxx  syslog_linux_sink2.hxx  win32_debugger_sink2.hxx
include/erebus/system/luaxx/: LICENSE  luaxx_base_fun.hxx  luaxx_class.hxx  luaxx_class_fun.hxx  luaxx_ctor.hxx  luaxx_dtor.hxx  luaxx_exception_handler.hxx  luaxx_exception_types.hxx  luaxx_fun.hxx  luaxx_function.hxx  luaxx_int64.hxx  luaxx_lua_name.hxx  luaxx_lua_ref.hxx  luaxx_metatable_registry.hxx  luaxx_obj.hxx  luaxx_obj_fun.hxx  luaxx_primitives.hxx  luaxx_property.hxx  luaxx_references.hxx  luaxx_registry.hxx  luaxx_resource_handler.hxx  luaxx_selector.hxx  luaxx_state.hxx  luaxx_traits.hxx  luaxx_tuple.hxx  luaxx_util.hxx
include/erebus/system/private/: null_logger.hxx
include/erebus/system/system/: packed_time.hxx  posix_error.hxx  process.hxx  signal_handler_posix.hxx  thread.hxx  unwindows.h  win32_error.hxx
include/erebus/system/util/: autoptr.hxx  errno.hxx  exception_util.hxx  generic_handle.hxx  null_mutex.hxx  thread_data.hxx  utf16.hxx
include/erebus/testing/: test_application.hxx  test_event_listener.hxx
src/: CMakeLists.txt
src/ipc/grpc/: CMakeLists.txt  erebus.proto  erebus_service.cxx  erebus_service.hxx  grpc_client.cxx  grpc_server.cxx  property_mapping.hxx  protocol.cxx  protocol.hxx  session_data.hxx  trace.hxx
src/ipc/grpc/tests/: CMakeLists.txt  call.cpp  client_base.cpp  common.hpp  main.cpp  ping.cpp  stream.cpp
src/system/: CMakeLists.txt  assert.cxx  debug.cxx  exception.cxx  init.cxx  logger.cxx  luaxx.cxx  program.cxx  property.cxx  property_bag.cxx  property_info.cxx  result.cxx  type_id.cxx
src/system/logger/: async_logger.cxx  async_logger2.cxx  file_sink.cxx  file_sink2.cxx  logger2.cxx  ostream_sink.cxx  ostream_sink2.cxx  simple_formatter.cxx  simple_formatter2.cxx  sync_logger.cxx  syslog_linux.cxx  syslog_linux_sink2.cxx  tee2.cxx  win32_debugger_sink.cxx  win32_debugger_sink2.cxx
src/system/luaxx/: luaxx_base_fun.cxx  luaxx_exception_handler.cxx  luaxx_int64.cxx  luaxx_metatable_registry.cxx  luaxx_property.cxx  luaxx_selector.cxx  luaxx_state.cxx  luaxx_util.cxx
src/system/system/: packed_time.cxx  posix_error.cxx  process.cxx  signal_handler_posix.cxx  thread.cxx  win32_error.cxx
src/system/tests/: CMakeLists.txt  common.hpp  flags.cpp  luaxx_class.cpp  luaxx_error.cpp  luaxx_exception.cpp  luaxx_int64.cpp  luaxx_interop.cpp  luaxx_metatable.cpp  luaxx_obj.cpp  luaxx_property.cpp  luaxx_reference.cpp  luaxx_selector.cpp  main.cpp  property.cpp  property_bag.cpp
src/system/util/: exception_util.cxx  utf16_win32.cxx
src/testing/: CMakeLists.txt  test_application.cxx  test_event_listener.cxx
